# nvalchemi-toolkit-ops

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  greptile.json  pyproject.toml
.github/: codecov.yml  copy-pr-bot.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_regression.yml
.github/workflows/: ci.yml  weekly-examples.yml
benchmarks/: benchmark-requires.txt  systems.py  utils.py
benchmarks/dynamics/: README.md  __init__.py  benchmark_config.yaml  benchmark_fire2.py  benchmark_fire_compare.py  benchmark_md_batch.py  benchmark_md_batch_torchsim.py  benchmark_md_single.py  benchmark_opt_batch.py  benchmark_opt_single.py  shared_utils.py
benchmarks/interactions/dispersion/: benchmark_dftd3.py  validate_d3_energies.py
benchmarks/interactions/electrostatics/: bench_f32_novirial.yaml  bench_f32_virial.yaml  bench_f64_novirial.yaml  bench_f64_virial.yaml  benchmark_config.yaml  benchmark_config_multipole.yaml  benchmark_electrostatics.py  profile_multipole.py  run_all_benchmarks.sh
benchmarks/neighborlist/: _bench_ctx.py  benchmark_config.yaml  benchmark_neighborlist.py
benchmarks/segment_ops/: README.rst  benchmark_config.yaml  benchmark_segment_ops.py
docs/: changes.md  conf.py  index.md  sg_execution_times.rst  sphinxext.py
docs/benchmarks/: dftd3.md  dynamics.md  electrostatics.md  generate_plots.py  index.md  neighborlist.md
docs/benchmarks/benchmark_results/: dftd3_benchmark_batch_nvalchemiops_h100-80gb-hbm3.csv  dftd3_benchmark_batch_torch_dftd_h100-80gb-hbm3.csv  dftd3_benchmark_nvalchemiops_h100-80gb-hbm3.csv  dftd3_benchmark_torch_dftd_h100-80gb-hbm3.csv  dynamics_md_batch_comparison_h100.csv  dynamics_md_single_nvalchemiops_h100.csv  dynamics_opt_batch_nvalchemiops_h100.csv  dynamics_opt_single_nvalchemiops_h100.csv  electrostatics_benchmark_ewald_nvalchemiops_h100-80gb-hbm3.csv  electrostatics_benchmark_pme_nvalchemiops_h100-80gb-hbm3.csv  (+4 more)
docs/modules/: dynamics.rst  electrostatics.rst  index.md
docs/userguide/: index.md
examples/: 01_bspline_visualization.py  02_segment_ops_autograd.py  example-requires.txt
examples/dispersion/: 01_dftd3_molecule.py  02_dftd3_batch_crystals.py  03_jax_dftd3_molecule.py  4300813.json  5000296.json  README.rst  d3-requires.txt  dimer.xyz  utils.py
examples/dynamics/: 01_langevin_integration.py  02_velocity_verlet_integration.py  03_nph_integration.py  04_npt_integration.py  05_batched_langevin_dynamics.py  06_fire_optimization.py  06_fire_variable_cell.py  07_fire_batched.py  07_fire_variable_cell.py  08_fire_batched.py  09_fire2_optimization.py  10_fire2_batched.py  11_fire2_variable_cell.py  README.rst  _dynamics_utils.py  _langevin_utils.py
examples/electrostatics/: 01_coulomb_example.py  02_ewald_summation_example.py  03_pme_example.py  04_jax_pme_example.py  05_multipole_ewald_summation_example.py  05_slab_correction_example.py  06_jax_slab_correction_example.py  06_multipole_pme_example.py  07_multipole_ewald_summation_example.py  08_multipole_pme_example.py  09_multipole_features_example.py  10_multipole_scf_cache_example.py  11_pme_energy_derivative_training.py  README.rst
examples/neighborlist/: neighbor-requires.txt
examples/neighbors/: 01_simple_neighbor_list.py  02_batch_neighbor_list.py  03_rebuild_neighborlist_detection.py  04_neighbors_list_torch_compile_performance.py  05_jax_neighbor_list.py  06_pair_outputs_lj.py  README.rst  system_utils.py
nvalchemiops/: __init__.py  batch_utils.py  segment_ops.py  segment_ops_backward.py  types.py  warp_dispatch.py
nvalchemiops/_reference/: multipole_reference.py
nvalchemiops/dynamics/: __init__.py
nvalchemiops/interactions/: __init__.py  lj.py  switching.py
nvalchemiops/jax/: segment_ops.py  spline.py
nvalchemiops/math/: __init__.py  gto.py  math.py  solid_harmonics.py  spherical_harmonics.py  spline.py
nvalchemiops/neighborlist/: __init__.py  batch_cell_list.py  cell_list.py  neighbor_utils.py
nvalchemiops/neighbors/: __init__.py  base_dispatch.py  batch_cell_list.py  batch_naive.py  batch_naive_dual_cutoff.py  cell_list.py  naive.py  naive_dual_cutoff.py  neighbor_utils.py  output_args.py  rebuild_detection.py  tile_batch_warp.py  tile_warp.py
nvalchemiops/torch/: __init__.py  _warp_op_helpers.py  autograd.py  fire2.py  segment_ops.py  spline.py
nvalchemiops/warp_dispatch/: __init__.py  core.py
test/: conftest.py  test-requires.txt  test_autograd.py  test_batch_utils.py  test_segment_ops.py  test_segment_ops_backward.py  test_segment_ops_jax.py  test_segment_ops_torch.py  test_spline.py  test_types.py  test_warp_dispatch.py
test/_license/: header_check.py
test/dynamics/: __init__.py  test_cell_utils.py  test_constraints.py  test_fire.py  test_fire2.py  test_integrator_shared.py  test_langevin.py  test_nose_hoover.py  test_npt.py  test_tile_reductions.py  test_utils.py  test_velocity_rescaling.py  test_velocity_verlet.py
test/interactions/: __init__.py  test_lj.py  test_switching.py
test/math/: __init__.py  conftest.py  test_gto.py  test_spherical_harmonics.py  test_spline.py
test/neighborlist/: test_batch_cell_list.py  test_batch_naive.py  test_batch_naive_dual_cutoff.py  test_cell_list.py  test_naive.py  test_naive_dual.py  test_neighborlist.py
test/neighbors/: __init__.py  conftest.py  test_base_dispatch.py  test_batch_cell_list_kernels.py  test_batch_cluster_tile_kernels.py  test_batch_naive_dual_kernels.py  test_batch_naive_kernels.py  test_cell_list_kernel_getters.py  test_cell_list_kernels.py  test_cluster_tile_kernel_getters.py  test_cluster_tile_kernels.py  test_compat_imports.py  test_factory_kernel_docstrings.py  test_factory_kernel_names.py  test_naive_dual_kernels.py  test_naive_kernel_getters.py  test_naive_kernels.py  test_neighbor_utils_kernels.py  test_pair_outputs.py  test_rebuild_detection_kernels.py  test_tile_batch_warp_kernels.py  test_tile_warp_kernels.py  test_utils.py
test/torch/: test_warp_boundary_audit.py
test/utils/: __init__.py
(+264 files in other folders)
